# inctrl

./: .gitignore  404.html  README.md  index.html  pyproject.toml
duration/: index.html
name_resolution/: index.html
oscilloscope/: index.html
search/: search_index.json
site/: mkdocs.yml
site/docs/: duration.md  index.md  name_resolution.md  oscilloscope.md  supported_instruments.md  waveform.md
site/site/: 404.html
site/site/search/: search_index.json
src/inctrl/: __init__.py  instruments.py  scope_example.py
src/inctrl/drivers/: __init__.py  command_dispatcher.py  db.py
src/inctrl/drivers/oscilloscopes/siglent/: sds8x.py
src/inctrl/model/: __init__.py  capabilities.py  ispec.py  oscilloscope.py  time.py  waveform.py
supported_instruments/: index.html
tests/: test_duration.py
waveform/: index.html
